// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StatusPill > variant='done' matches snapshot 1`] = `
<span
  class="inline-flex shrink-0 items-center gap-1 rounded-full border px-2 py-0.5 text-[11px] font-medium uppercase tracking-wide"
  data-testid="status-pill"
  data-variant="done"
  style="background-color: color-mix(in oklch, var(--success) 10%, transparent); border-color: color-mix(in oklch, var(--success) 30%, transparent); color: var(--success);"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-circle fill-current"
    data-testid="status-pill-dot"
    fill="none"
    height="6"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="6"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
  </svg>
  <span
    data-testid="status-pill-label"
  >
    Done
  </span>
</span>
`;

exports[`StatusPill > variant='failed' matches snapshot 1`] = `
<span
  class="inline-flex shrink-0 items-center gap-1 rounded-full border px-2 py-0.5 text-[11px] font-medium uppercase tracking-wide"
  data-testid="status-pill"
  data-variant="failed"
  style="background-color: color-mix(in oklch, var(--danger) 10%, transparent); border-color: color-mix(in oklch, var(--danger) 30%, transparent); color: var(--danger);"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-circle fill-current"
    data-testid="status-pill-dot"
    fill="none"
    height="6"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="6"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
  </svg>
  <span
    data-testid="status-pill-label"
  >
    Failed
  </span>
</span>
`;

exports[`StatusPill > variant='idle' matches snapshot 1`] = `
<span
  class="inline-flex shrink-0 items-center gap-1 rounded-full border px-2 py-0.5 text-[11px] font-medium uppercase tracking-wide"
  data-testid="status-pill"
  data-variant="idle"
  style="background-color: color-mix(in oklch, var(--text-dim) 10%, transparent); border-color: color-mix(in oklch, var(--text-dim) 30%, transparent); color: var(--text-dim);"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-circle fill-current"
    data-testid="status-pill-dot"
    fill="none"
    height="6"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="6"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
  </svg>
  <span
    data-testid="status-pill-label"
  >
    Idle
  </span>
</span>
`;

exports[`StatusPill > variant='offline' matches snapshot 1`] = `
<span
  class="inline-flex shrink-0 items-center gap-1 rounded-full border px-2 py-0.5 text-[11px] font-medium uppercase tracking-wide"
  data-testid="status-pill"
  data-variant="offline"
  style="background-color: color-mix(in oklch, var(--text-muted) 10%, transparent); border-color: color-mix(in oklch, var(--text-muted) 30%, transparent); color: var(--text-muted);"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-circle fill-current"
    data-testid="status-pill-dot"
    fill="none"
    height="6"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="6"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
  </svg>
  <span
    data-testid="status-pill-label"
  >
    Offline
  </span>
</span>
`;

exports[`StatusPill > variant='running' matches snapshot 1`] = `
<span
  class="inline-flex shrink-0 items-center gap-1 rounded-full border px-2 py-0.5 text-[11px] font-medium uppercase tracking-wide"
  data-testid="status-pill"
  data-variant="running"
  style="background-color: color-mix(in oklch, var(--accent) 10%, transparent); border-color: color-mix(in oklch, var(--accent) 30%, transparent); color: var(--accent);"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-circle fill-current"
    data-testid="status-pill-dot"
    fill="none"
    height="6"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="6"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
  </svg>
  <span
    data-testid="status-pill-label"
  >
    Running
  </span>
</span>
`;

exports[`StatusPill > variant='waiting' matches snapshot 1`] = `
<span
  class="inline-flex shrink-0 items-center gap-1 rounded-full border px-2 py-0.5 text-[11px] font-medium uppercase tracking-wide"
  data-testid="status-pill"
  data-variant="waiting"
  style="background-color: color-mix(in oklch, var(--warning) 10%, transparent); border-color: color-mix(in oklch, var(--warning) 30%, transparent); color: var(--warning);"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-circle fill-current"
    data-testid="status-pill-dot"
    fill="none"
    height="6"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="6"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
  </svg>
  <span
    data-testid="status-pill-label"
  >
    Waiting
  </span>
</span>
`;

exports[`StatusPill > variant='warning' matches snapshot 1`] = `
<span
  class="inline-flex shrink-0 items-center gap-1 rounded-full border px-2 py-0.5 text-[11px] font-medium uppercase tracking-wide"
  data-testid="status-pill"
  data-variant="warning"
  style="background-color: color-mix(in oklch, var(--warning) 10%, transparent); border-color: color-mix(in oklch, var(--warning) 30%, transparent); color: var(--warning);"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-circle fill-current"
    data-testid="status-pill-dot"
    fill="none"
    height="6"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="6"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
  </svg>
  <span
    data-testid="status-pill-label"
  >
    Warning
  </span>
</span>
`;
